--- a/src/main/resources/templates/user/delete/result.html
+++ b/src/main/resources/templates/user/delete/result.html
@@ -13,7 +13,7 @@
     <p th:text="${name} + さんを削除しました。">削除しました。</p>
   </div>
   <div class="ui basic segment">
-    <a th:href="@{/}">利用者一覧へ</a>
+    <a th:href="@{/serversiderendaring}">利用者一覧へ</a>
   </div>
 </div>
 
