--- a/src/main/resources/templates/user/register/confirm.html
+++ b/src/main/resources/templates/user/register/confirm.html
@@ -16,8 +16,8 @@
 
     <div class="ui basic segment">
       <a class="ui positive basic button"
-         th:href="@{/user/register/register}">登録する</a>
-      <a th:href="@{/user/register/input/again}">修正する</a>
+         th:href="@{/serversiderendaring/user/register/register}">登録する</a>
+      <a th:href="@{/serversiderendaring/user/register/input/again}">修正する</a>
     </div>
 </div>
 
