--- a/src/main/resources/templates/user/register/form.html
+++ b/src/main/resources/templates/user/register/form.html
@@ -13,7 +13,7 @@
   <div class="ui vertical segment">
   <form id="custom-form" class="ui form" name="body"
         method="post" action="#"
-        th:object="${user}" th:action="@{/user/register/confirm}">
+        th:object="${user}" th:action="@{/serversiderendaring/user/register/confirm}">
 
     <div class="ui vertical segment">
     <div th:replace="fragments/input::macro('identifier.value','利用者ID','someone@example.com')">
