--- a/src/main/resources/templates/user/register/result.html
+++ b/src/main/resources/templates/user/register/result.html
@@ -14,7 +14,7 @@
     <p th:text="${name} + ' (' + ${id} + ') ' + さんを登録しました。">登録完了しました。</p>
   </div>
   <div class="ui basic segment">
-  <a th:href="@{/}">利用者一覧へ</a>
+  <a th:href="@{/serversiderendaring}">利用者一覧へ</a>
   </div>
 
 </div>
