--- a/src/main/resources/templates/user/update/confirm.html
+++ b/src/main/resources/templates/user/update/confirm.html
@@ -45,9 +45,9 @@
 
     <div class="ui basic segment">
       <a class="ui secondary basic button"
-         th:href="@{/user/{userId}/update/register(userId=${user.identifier()})}">保存する</a>
+         th:href="@{/serversiderendaring/user/{userId}/update/register(userId=${user.identifier()})}">保存する</a>
       <a class=""
-         th:href="@{/user/{userId}/update/input/again(userId=${user.identifier()})}">入力に戻る</a>
+         th:href="@{/serversiderendaring/user/{userId}/update/input/again(userId=${user.identifier()})}">入力に戻る</a>
     </div>
 </div>
 
