--- a/src/main/resources/templates/user/update/form.html
+++ b/src/main/resources/templates/user/update/form.html
@@ -15,7 +15,7 @@
         <form id="custom-form" class="ui form"
               name="body" method="post" action="#"
               th:object="${user}"
-              th:action="@{/user/{userId}/update/confirm(userId=${user.identifier()})}">
+              th:action="@{/serversiderendaring/user/{userId}/update/confirm(userId=${user.identifier()})}">
 
             <div class="ui vertical segment">
                 <div class="inline field">
