--- a/src/main/resources/templates/user/delete/confirm.html
+++ b/src/main/resources/templates/user/delete/confirm.html
@@ -19,8 +19,8 @@
 
     <div class="ui vertical segment">
       <a class="ui negative basic button"
-         th:href="@{/user/{userId}/delete(userId=${user.identifier()})}">削除</a>
-      <a th:href="@{/}">一覧に戻る</a>
+         th:href="@{/serversiderendaring/user/{userId}/delete(userId=${user.identifier()})}">削除</a>
+      <a th:href="@{/serversiderendaring}">一覧に戻る</a>
     </div>
 </div>
 
