--- a/src/main/resources/templates/user/update/result.html
+++ b/src/main/resources/templates/user/update/result.html
@@ -15,7 +15,7 @@
   </div>
 
   <div class="ui basic segment">
-  <a th:href="@{/}">利用者一覧へ</a>
+  <a th:href="@{/serversiderendaring}">利用者一覧へ</a>
   </div>
 
 </div>
