refactor: リンク切れを修正。

--- a/src/main/resources/templates/user/update/form.html
+++ b/src/main/resources/templates/user/update/form.html
@@ -51,7 +51,7 @@
             </div>
             <div class="ui basic segment">
                 <button class="ui secondary basic button">確認する</button>
-                <a th:href="@{/}">一覧に戻る</a>
+                <a th:href="@{/serversiderendaring}">一覧に戻る</a>
             </div>
         </form>
     </div>
