--- a/src/main/resources/templates/user/register/form.html
+++ b/src/main/resources/templates/user/register/form.html
@@ -26,7 +26,7 @@
     </div>
     <div class="ui basic segment">
       <button class="ui positive basic button">確認する</button>
-      <a th:href="@{/}">一覧に戻る</a>
+      <a th:href="@{/serversiderendaring}">一覧に戻る</a>
     </div>
   </form>
   </div>
